[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/textures/backgroundBox.png" type="Texture" id=1]
[ext_resource path="res://scenes/Option.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Dialog.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/telephone-ring-04.wav.sample" type="AudioStream" id=4]
[ext_resource path="res://assets/fonts/Blockletter.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/audio/click-snap-perc.wav" type="AudioStream" id=7]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform int pixel_size : hint_range(1, 100) = 1;

void fragment(){
	vec2 pos = UV / TEXTURE_PIXEL_SIZE;
	vec2 square = vec2(float(pixel_size), float(pixel_size));
	vec2 top_left = floor(pos / square) * square;
	vec4 total = vec4(0., 0., 0., 0.);
	for (int x = int(top_left.x); x < int(top_left.x) + pixel_size; x++){
		for (int y = int(top_left.y); y < int(top_left.y) + pixel_size; y++){
			total += texture(TEXTURE, vec2(float(x), float(y)) * TEXTURE_PIXEL_SIZE);
		}
	}
	COLOR = total / float(pixel_size * pixel_size);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/pixel_size = 50

[sub_resource type="ImageTexture" id=6]

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 5 )

[node name="Dialog" type="Node" groups=["Dialog"]]
script = ExtResource( 3 )
phone = ExtResource( 4 )
pressnext = ExtResource( 7 )

[node name="DialogBox" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="NinePatchRect" parent="DialogBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.861
margin_top = 47.2184
margin_right = 405.139
margin_bottom = 272.218
texture = ExtResource( 1 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speaker" type="NinePatchRect" parent="DialogBox/Body"]
margin_left = -20.1587
margin_top = -32.3984
margin_right = 159.841
margin_bottom = 15.6016
rect_min_size = Vector2( 180, 48 )
texture = ExtResource( 1 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeakerLight" type="Sprite" parent="DialogBox/Body/Speaker"]
material = SubResource( 5 )
position = Vector2( 2.37842, -142.841 )
scale = Vector2( 176.675, 142.194 )
texture = SubResource( 6 )

[node name="SpeakerTexture" type="Sprite" parent="DialogBox/Body/Speaker"]
position = Vector2( 92.895, -38.956 )
scale = Vector2( 0.410814, 0.37296 )

[node name="SpeakerLabel" type="Label" parent="DialogBox/Body/Speaker"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 2 )
text = "Speaker"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextContainer" type="MarginContainer" parent="DialogBox/Body"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -369.0
margin_top = -71.5
margin_right = 369.0
margin_bottom = 71.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLabel" type="Label" parent="DialogBox/Body/TextContainer"]
margin_top = 40.0
margin_right = 738.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
text = "This is where the body of the dialog text goes.
Press F6 to play! ^_^"
autowrap = true

[node name="ActionBox" type="TextureButton" parent="DialogBox/Body"]
margin_left = 667.0
margin_top = 191.0
margin_right = 859.0
margin_bottom = 242.0
texture_normal = ExtResource( 1 )
expand = true

[node name="ActionLabel" type="Label" parent="DialogBox/Body/ActionBox"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Press Spacebar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceBarAnimation" type="AnimationPlayer" parent="DialogBox/Body/ActionBox"]

[node name="OptionList" type="VBoxContainer" parent="DialogBox/Body"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -488.059
margin_top = -133.848
margin_right = -1.05945
margin_bottom = -14.8485
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option" parent="DialogBox/Body/OptionList" instance=ExtResource( 2 )]
visible = false
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 487.0
margin_bottom = 37.0

[node name="Option2" parent="DialogBox/Body/OptionList" instance=ExtResource( 2 )]
visible = false
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 487.0
margin_bottom = 37.0

[node name="Option3" parent="DialogBox/Body/OptionList" instance=ExtResource( 2 )]
visible = false
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 487.0
margin_bottom = 37.0

[node name="DialogSfx" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="DialogBox/Body/ActionBox" to="." method="_on_ActionNext_pressed"]
